--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="./static/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 	<meta charset="utf-8">
-	<script src="./static/script.js" defer></script>
+	<!--<script src="./static/script.js" defer></script>-->
 </head>
 <body>
 	<header>
 		<img src="./static/adn.jpg" width="150px">
 	</header>
 
-	<button id="btn">☰</button>
+<!--	<button id="btn">☰</button>
 	
         <nav id="nav">
             <ul> 
@@ -24,7 +24,8 @@
 				<li> <a href="" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
-    <h2 id="title" align="center">Credit Scoring Model </br>With Machine Learning </h2>
+      -->
+    <h1 id="title" align="center">Credit Scoring Model </br>With Machine Learning </h1>
 
 	<div class="desc" align="center">
 		<ul>
