--- a/templates/index.html
+++ b/templates/index.html
@@ -217,6 +217,19 @@
 	       <!-- Compiled and minified JavaScript -->
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/ materialize.min.js"></script> -->
 
+	<div id="pied">
+		<!--<p>This is a footer</p>-->
+		<ul>
+			<li> <a href="https://www.linkedin.com/company/adncorp/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+			<li> <a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+			<li> <a href="" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+			<li> <a href="" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+			<!--  <li><img src="image/laptop.png"><a href="https://github.com/"></a></li> -->
+			<!--<li> <a href="https://github.com/" target="_blank"><img src="image/laptop.png" width=60px height=60px></a></li> -->
+
+			<!-- target='_blank' c'est pour ouvrir une nouvelle page quand on click sur le lien. -->
+		</ul>
+	</div> 
 	<footer>
 		<div>
 			<p>Copyright &copy; Adn Corp 2020-2021 All rights reserved</p>
