--- a/templates/index.html
+++ b/templates/index.html
@@ -40,25 +40,25 @@
 					<form method="POST" action="{{url_for('analyze')}}">
 						<div class="input-field">
 							<p> <label>ApplicantIncome:</label>  
-								<input type="number" id="ApplicantIncomeInput" min="100" max="100000" step="100" value="0" name="ApplicantIncome">
+								<input type="number" id="ApplicantIncomeInput" min="100" max="7000000" step="50" value="0" name="ApplicantIncome">
 							</p>
 						</div>
 
 						<div class="input-field">
 							<p>	<label>CoapplicantIncome:</label>
-								<input type="number" id="CoapplicantIncomeInput" min="100" max="50000" value="0" step="100" name="CoapplicantIncome">
+								<input type="number" id="CoapplicantIncomeInput" min="100" max="7000000" value="0" step="50" name="CoapplicantIncome">
 							</p>
 						</div>
 
 						<div class="input-field">
 							<p>	<label>LoanAmount:</label>
-								<input type="number" id="LoanAmountInput" min="0" max="700" step="10" value="0" name="LoanAmount">
+								<input type="number" id="LoanAmountInput" min="0" max="7000000" step="10" value="0" name="LoanAmount">
 							</p>
 						</div>
 
 						<div class="input-field">
 							<p>	<label>Loan_Amount_Term:</label>
-								<input type="number" id="Loan_Amount_Term Input" min="0" max="480" step="10" value="0" name="Loan_Amount_Term">
+								<input type="number" id="Loan_Amount_Term Input" min="7000000" max="" step="10" value="0" name="Loan_Amount_Term">
 							</p>
 						</div>
 						<!-- New -->
