--- a/templates/index.html
+++ b/templates/index.html
@@ -201,7 +201,7 @@
                 <div class="pre">
 
                   {% if result_prediction == 1 %}
-                    <p><strong>Insolvable</strong></p>
+                    <p><strong>insolvent</strong></p>
                   {% elif result_prediction == 0 %}
                     <p><strong>Solvable</strong></p>    
                   {% else %}
