--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
 						<div class="input-field">
 							<p>	<label>Loan_Amount_Term:</label>
-								<input type="number" id="Loan_Amount_Term Input" min="7000000" max="" step="10" value="0" name="Loan_Amount_Term">
+								<input type="number" id="Loan_Amount_Term Input" min="0" max="" step="7000000" value="0" name="Loan_Amount_Term">
 							</p>
 						</div>
 						<!-- New -->
