--- a/static/style.css
+++ b/static/style.css
@@ -5,10 +5,11 @@ ul li.btn a{
 			padding:8px; /* Espace en haut, en bas, à gauche et à droite sera à 10px*/
 			font-size: 15px;/* Augmenter la taille de nos textes*/
 			text-align: center;
+			list-style: none;
 		}
 
 ul li.btn:hover a{
-			color:red; /* couleur du text*/
+			color:rebeccapurple; /* couleur du text*/
 			background-color:white; /* couleur du font de l'élément*/
 			transition:0.9s all; /* le changement de cette couleur se fera apres 0.5sec et ça se fera sur tout l'élément
 			En général on met 0.3s*/
@@ -137,9 +138,30 @@ h2#title{
 	width: 500px;
 	background-color: red;
 }
-div.centrage {
-	text-align: center;
+
+.form{
+	max-width: 200px;
+	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
+	font-weight: normal;
+	line-height: 1.625;
+	margin: 8px auto;
+	padding-left: 16px;
+	z-index: 2;
+	/*line-height:10px;*/
 }
+
 div.al p.middle{
 	text-align: center;
+}
+.box{
+	display: grid;
+	grid-template-columns: 120px 120px 120px;
+	align-items: start;
+	justify-content: space-between;
+}
+.box :first-child {
+	align-self: center
+}
+div#containeur {
+	display: inline-block;
 }
